# Final-Homework

./: .gitignore
api/: alembic.ini  pyproject.toml
api/app/: main.py
api/app/db/: models.py  session.py
api/app/routers/: candidate.py  graph.py  health.py
api/app/schemas/: __init__.py
api/migrations/versions/: 729c29e91733_initial_schema.py
app/: package.json  pnpm-lock.yaml
app/src/app/: layout.tsx  page.tsx
app/src/app/graph/: page.tsx
app/src/lib/: api.ts
crawler/: github_scrape.py  pyproject.toml
infra/: docker-compose.yml
